# etl_duckdb_python

./: .gitignore  Dockerfile  README.md  app.py  duck.db  pipeline_00.py  pyproject.toml  template.env
