[tool.poetry]
name = "etl-duckdb-python"
version = "0.1.0"
description = ""
authors = ["jusluz <julioluz84@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
gdown = "^5.2.0"
duckdb = "^1.2.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
